docs/v1.3.0/zh/api/core-extra/MBEquipmentRoster.md
<!-- BEGIN BREADCRUMB -->
**首页** → **API 目录** → **本领域** → `MBEquipmentRoster`
- [← 本领域 / 返回 core-extra](./)
- [↑ API 目录](../)
- [🏠 首页 v1.3.0](../../)
- [⭐ 版本架构](../../architecture/)
<!-- END BREADCRUMB -->
# MBEquipmentRoster

**Namespace:** TaleWorlds.Core
**Module:** TaleWorlds.Core
**Type:** `public class MBEquipmentRoster : MBObjectBase`
**Base:** `MBObjectBase`
**File:** `TaleWorlds.Core/MBEquipmentRoster.cs`

## 概述

`MBEquipmentRoster` 位于 `TaleWorlds.Core`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.Core` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要属性

| Name | Signature |
|------|-----------|
| `EquipmentFlags` | `public EquipmentFlags EquipmentFlags { get; }` |
| `AllEquipments` | `public MBReadOnlyList<Equipment> AllEquipments { get; }` |
| `DefaultEquipment` | `public Equipment DefaultEquipment { get; }` |

## 主要方法

### HasEquipmentFlags
`public bool HasEquipmentFlags(EquipmentFlags flags)`

**用途 / Purpose:** 判断当前对象是否包含/拥有 `equipment flags`。

### IsEquipmentTemplate
`public bool IsEquipmentTemplate()`

**用途 / Purpose:** 处理 `is equipment template` 相关逻辑。

### Init
`public void Init(MBObjectManager objectManager, XmlNode node)`

**用途 / Purpose:** 初始化 `init` 的状态、资源或绑定。

### Deserialize
`public override void Deserialize(MBObjectManager objectManager, XmlNode node)`

**用途 / Purpose:** 处理 `deserialize` 相关逻辑。

### AddEquipmentRoster
`public void AddEquipmentRoster(MBEquipmentRoster equipmentRoster, Equipment.EquipmentType equipmentType)`

**用途 / Purpose:** 向当前集合/状态中添加 `equipment roster`。

### AddOverridenEquipments
`public void AddOverridenEquipments(MBObjectManager objectManager, List<XmlNode> overridenEquipmentSlots)`

**用途 / Purpose:** 向当前集合/状态中添加 `overriden equipments`。

### OrderEquipments
`public void OrderEquipments()`

**用途 / Purpose:** 处理 `order equipments` 相关逻辑。

### InitializeDefaultEquipment
`public void InitializeDefaultEquipment(string equipmentName)`

**用途 / Purpose:** 初始化 `default equipment` 的状态、资源或绑定。

## 使用示例

```csharp
var value = new MBEquipmentRoster();
value.HasEquipmentFlags(flags);
```

## 参见

- [完整类目录](../catalog)